Remove fixed height from building image to prevent it from stretching

--- a/client/templates/building/building.styl
+++ b/client/templates/building/building.styl
@@ -186,7 +186,6 @@
     max-width 800px
     .building-img
       width 100%
-      height 500px
     .carousel-control
       height 100%
       .building-img-icon
